[package]
name = "firetail-rust-lib"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brotli = "3.3.4"
futures-util = "0.3.28"
reqwest = "0.11"
reqwest-middleware = "0.1.6"
reqwest-retry = "0.1.5"
reqwest-tracing = "0.2.3"
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0"
pluralizer = "0.4.0"

[dependencies.actix-web]
version = "4.3.1"

[dependencies.actix-http]
version = "3.3.1"

[lib]
name = "firetail_rust_lib"
path = "src/lib.rs"
